--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
          <div class="twelve columns">
 
-            <h1>Multi-modality for Activity Recognition</h1>
+            <h1>Activity Recognition using Multi-modality Data</h1>
 
             <p class="lead add-bottom">
             I am a researcher at <a href="https://www.uni-mannheim.de/dws/">Data and Web Science Group.</a> My research focuses on using machine learning and machine vision for activity recognition.
