--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
             <h1>Publications</h1>
 
             <p class="lead add-bottom">
-
+		    
+	    <li>Taha Alhersh, Samir Brahim Belhaouari, Heiner Stuckenschmidt(2019). <a href="https://link.springer.com/chapter/10.1007%2F978-3-030-34255-5_9" target="_blank" title="Paper"> Action Recognition Using Local Visual Descriptors and Inertial Data.</a> In: Chatzigiannakis I., De Ruyter B., Mavrommati I. (eds) Ambient Intelligence. AmI 2019. Lecture Notes in Computer Science, vol 11912. Springer, Cham</li>
             <li>Taha Alhersh and Heiner Stuckenschmidt. "On the Combination of IMU and Optical Flow for Action Recognition". In 2019 IEEE International Conference on Pervasive Computing and Communications Workshops, PerCom Workshops 2019 : Kyoto, Japan. <a href="media/p17-alhersh.pdf" target="_blank"><i class="fa fa-file"></i></a></li>
             <li>Taha Alhersh and Heiner Stuckenschmidt. <a href="http://www.scitepress.org/PublicationsDetail.aspx?ID=7IixN3sCK40=&t=1" target="_blank" title="Paper">"Unsupervised Fine-tuning of Optical Flow for Better Motion Boundary Estimation"</a> In International Conference on Computer Vision Theory and Applications (VISAPP) 2019. Prague, Czech Republic.</li>
             <li>Alhersh, Taha, Brahim Belhaouari Samir, Hamada Al-Absi, Abdullah Alorainy, and Belloui Bouzid. "Species identification using part of DNA sequence: Evidence from machine learning algorithms." In Proceedings of the 9th EAI International Conference on Bio-inspired Information and Communications Technologies (formerly BIONETICS), pp. 490-494. ICST (Institute for Computer Sciences, Social-Informatics and Telecommunications Engineering), 2016.<a href="https://dl.acm.org/citation.cfm?id=2954773" target="_blank" title="Paper"><i class="fa fa-file"></i></a> </li>
