--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                      <li><a href="https://github.com/alhersh" target="_blank"><i class="fa fa-github"></i></a></li>
                      <li><a href="https://orcid.org/0000-0002-3673-5397" target="_blank"><i class="ai ai-orcid"></i></a></li>
                      <li><a href="https://www.linkedin.com/in/alhersh/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                     <li><a href="media/CV.pdf" target="_blank"><i class="fa fa-file"></i></a></li>
+                     <!--<li><a href="media/CV.pdf" target="_blank"><i class="fa fa-file"></i></a></li>-->
                       
                   </ul>
                </div>
