--- a/index.html
+++ b/index.html
@@ -116,6 +116,25 @@
             <div class="row">
 
               <div class="twelve columns">
+                <h2> Metrics Performance Analysis of Optical Flow </h2>
+                <p class="lead add-bottom">
+                    In this research new optical ﬂow performance metrics have been proposed and evaluated alongside with current metrics.
+                </p>
+               
+              </div>
+
+              <div class="six columns">
+                <img src="media/Baker_error_visualization.jpg">
+              </div>
+                <div class="six columns">
+                    <img src="media/3dQurtile_Error_Baker.jpg">
+                </div>
+                
+            </div>
+           <hr>
+            <div class="row">
+
+              <div class="twelve columns">
                 <h2> Unsupervised Fine-tuning of Optical Flow </h2>
                 <p class="lead add-bottom">
                     An unsupervised loss function based on classical variational optical flow for deep learning based optical flow methods i.e. Flownet2-SD.
