--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h1>Activity Recognition using Multi-modality Data</h1>
 
             <p class="lead add-bottom">
-            I am a researcher at <a href="https://www.uni-mannheim.de/dws/">Data and Web Science Group.</a> My research focuses on using machine learning and machine vision for activity recognition.
+            I am a medical computer scientist at <a href="https://www.highmed.org/">HiGHmed</a>. My research during my PhD focused on using machine learning and machine vision for activity recognition.
             </p>
 
             <hr>
