--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
             <h1><font color="white">Taha Alhersh</font></h1>
 
-            <h5> <font color="white"> Doctoral student, Data and Web Science Group </font> </h5>
-            <h5> <font color="white"> Mannheim University </font> </h5>
-            <font color="white"> taha(at)informatik.uni-mannheim.de </font>
+            <h5> <font color="white"> Medical Computer Scientist, HiGHmed </font> </h5>
+            <h5> <font color="white"> HiGHmed Medical Informatics </font> </h5>
+            <font color="white"> (first name).(last name)(at)bioquant.uni-heidelberg.de </font>
             <footer>
               <div class="row">
 
@@ -109,7 +109,7 @@
             <h1>Activity Recognition using Multi-modality Data</h1>
 
             <p class="lead add-bottom">
-            I am a medical computer scientist at <a href="https://www.highmed.org/">HiGHmed</a>. My research during my PhD focused on using machine learning and machine vision for activity recognition.
+            I am a Medical Computer Scientist working on  <a href="https://www.highmed.org/">HiGHmed</a> project to find novel and interoperable solutions in medical informatics. My research during my PhD focused on using machine learning and machine vision for activity recognition.
             </p>
 
             <hr>
