--- a/index.html
+++ b/index.html
@@ -105,13 +105,15 @@
     <div class="row add-bottom">
 
          <div class="twelve columns">
-
+	    <p class="lead add-bottom">
+		 I am a Medical Computer Scientist working on  <a href="https://www.highmed.org/">HiGHmed</a> project to find novel and interoperable solutions in medical informatics. 
+	   </p>
             <h1>Activity Recognition using Multi-modality Data</h1>
 
             <p class="lead add-bottom">
-            I am a Medical Computer Scientist working on  <a href="https://www.highmed.org/">HiGHmed</a> project to find novel and interoperable solutions in medical informatics. My research during my PhD focused on using machine learning and machine vision for activity recognition.
+            My research during my PhD in <a href="https://www.uni-mannheim.de/dws/">Data and Web Science Group</a>  focused on using machine learning and machine vision for activity recognition.
             </p>
-
+		<hr>
             <hr>
             <div class="row">
 
