--- a/index.html
+++ b/index.html
@@ -105,15 +105,17 @@
     <div class="row add-bottom">
 
          <div class="twelve columns">
+	    <h1>Medical Informatics</h1>
 	    <p class="lead add-bottom">
 		 I am a Medical Computer Scientist working on  <a href="https://www.highmed.org/">HiGHmed</a> project to find novel and interoperable solutions in medical informatics. 
 	   </p>
+		 <hr>
             <h1>Activity Recognition using Multi-modality Data</h1>
 
             <p class="lead add-bottom">
             My research during my PhD in <a href="https://www.uni-mannheim.de/dws/">Data and Web Science Group</a>  focused on using machine learning and machine vision for activity recognition.
             </p>
-		<hr>
+		
             <hr>
             <div class="row">
 
