--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
             <h1>Publications</h1>
 
             <p class="lead add-bottom">
+	    <li>Alhersh, Taha. (2021). <a href="https://madoc.bib.uni-mannheim.de/59204/" target="_blank" title="Paper"> From Motion to Human Activity Recognition. </a>Dissertation, Mannheim.</i>
 	    <li>Alhersh, T.; Belhaouari, S. and Stuckenschmidt, H. (2020). <a href="https://www.scitepress.org/PublicationsDetail.aspx?ID=T/03mJwHl94=&t=1" target="_blank" title="Paper"> Metrics Performance Analysis of Optical Flow</a>.In Proceedings of the 15th International Joint Conference on Computer Vision, Imaging and Computer Graphics Theory and Applications - Volume 4: VISAPP, ISBN 978-989-758-402-2, ISSN 2184-4321, pages 749-758.</i>
 	    <li>Taha Alhersh, Samir Brahim Belhaouari, Heiner Stuckenschmidt(2019). <a href="https://link.springer.com/chapter/10.1007%2F978-3-030-34255-5_9" target="_blank" title="Paper"> Action Recognition Using Local Visual Descriptors and Inertial Data.</a> In: Chatzigiannakis I., De Ruyter B., Mavrommati I. (eds) Ambient Intelligence. AmI 2019. Lecture Notes in Computer Science, vol 11912. Springer, Cham</li>
             <li>Taha Alhersh and Heiner Stuckenschmidt. "On the Combination of IMU and Optical Flow for Action Recognition". In 2019 IEEE International Conference on Pervasive Computing and Communications Workshops, PerCom Workshops 2019 : Kyoto, Japan. <a href="media/p17-alhersh.pdf" target="_blank"><i class="fa fa-file"></i></a></li>
