--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <h1>Activity Recognition using Multi-modality Data</h1>
 
             <p class="lead add-bottom">
-            My research during my PhD in <a href="https://www.uni-mannheim.de/dws/">Data and Web Science Group</a>  focused on using machine learning and machine vision for activity recognition.
+            My research during my PhD in <a href="https://www.uni-mannheim.de/dws/people/alumni/dr-taha-alhersh/">Data and Web Science Group</a>  focused on using machine learning and machine vision for activity recognition.
             </p>
 		
             <hr>
