--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
             <h1><font color="white">Taha Alhersh</font></h1>
 
-            <h5> <font color="white"> Medical Computer Scientist, HiGHmed </font> </h5>
-            <h5> <font color="white"> HiGHmed Medical Informatics </font> </h5>
-            <font color="white"> (first name).(last name)(at)bioquant.uni-heidelberg.de </font>
+            <h5> <font color="white"> Digitalization Research Scientist, BASF </font> </h5>
+            <h5> <font color="white"> BASF SE </font> </h5>
+            <font color="white"></font>
             <footer>
               <div class="row">
 
@@ -105,9 +105,14 @@
     <div class="row add-bottom">
 
          <div class="twelve columns">
+	 <h1>Digitalization Research Scientist</h1>
+	    <p class="lead add-bottom">
+		 I am working as Digitalization Researcg Scientist at <a href="https://www.basf.com/global/en.html">BASF</a>. 
+	   </p>
+		 <hr>
 	    <h1>Medical Informatics</h1>
 	    <p class="lead add-bottom">
-		 I am a Medical Computer Scientist working on  <a href="https://www.highmed.org/">HiGHmed</a> project to find novel and interoperable solutions in medical informatics. 
+		 I have worked as Medical Computer Scientist on  <a href="https://www.highmed.org/">HiGHmed</a> project to find novel and interoperable solutions in medical informatics. 
 	   </p>
 		 <hr>
             <h1>Activity Recognition using Multi-modality Data</h1>
