--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
             <h1><font color="white">Taha Alhersh</font></h1>
 
-            <h5> <font color="white"> Digitalization Research Scientist, BASF </font> </h5>
-            <h5> <font color="white"> BASF SE </font> </h5>
+            <h5> <font color="white"> Driving Digitalization @ BASF </font> </h5>
+            <h5> <font color="white"> BASF Digital Solutions </font> </h5>
             <font color="white"></font>
             <footer>
               <div class="row">
@@ -107,7 +107,7 @@
          <div class="twelve columns">
 	 <h1>Digitalization Research Scientist</h1>
 	    <p class="lead add-bottom">
-		 I am working as Digitalization Researcg Scientist at <a href="https://www.basf.com/global/en.html">BASF</a>. 
+		 Driving Digitalization and AI Projects at <a href="https://www.basf.com/global/en.html">BASF</a>. 
 	   </p>
 		 <hr>
 	    <h1>Medical Informatics</h1>
