Update index and icon and photo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <h1><font color="white">Taha Alhersh</font></h1>
 
-            <h5> <font color="white"> Driving Digitalization @ BASF </font> </h5>
+            <h5> <font color="white"> Driving Digitalization and AI Innovations </font> </h5>
             <h5> <font color="white"> BASF Digital Solutions </font> </h5>
             <font color="white"></font>
             <footer>
@@ -118,7 +118,7 @@
             <h1>Activity Recognition using Multi-modality Data</h1>
 
             <p class="lead add-bottom">
-            My research during my PhD in <a href="https://www.uni-mannheim.de/dws/people/alumni/dr-taha-alhersh/">Data and Web Science Group</a>  focused on using machine learning and machine vision for activity recognition.
+            PhD research <a href="https://www.uni-mannheim.de/dws/people/alumni/dr-taha-alhersh/">Data and Web Science Group</a>  focused on using machine learning and machine vision for activity recognition.
             </p>
 		
             <hr>
