--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="row add-bottom">
 
          <div class="twelve columns">
-	 <h1>Digitalization Research Scientist</h1>
+	 <h1>Senir Digitalization Expert | Data Engineer | Value Owner</h1>
 	    <p class="lead add-bottom">
 		 Driving Digitalization and AI Projects at <a href="https://www.basf.com/global/en.html">BASF</a>. 
 	   </p>
